--- a/wordcloud-cli-for-japanese/pyproject.toml
+++ b/wordcloud-cli-for-japanese/pyproject.toml
@@ -6,6 +6,9 @@ authors = ["Niten Nashiki <n.nashiki.work@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+wordcloud = "^1.8.1"
+mecab-python3 = "^1.0.3"
+unidic-lite = "^1.0.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
