--- a/wordcloud-cli-for-japanese/pyproject.toml
+++ b/wordcloud-cli-for-japanese/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 wordcloud = "^1.8.1"
 mecab-python3 = "^1.0.3"
 unidic-lite = "^1.0.7"
+click = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
