--- a/wordcloud-cli-for-japanese/pyproject.toml
+++ b/wordcloud-cli-for-japanese/pyproject.toml
@@ -14,6 +14,9 @@ click = "^7.1.2"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 
+[tool.poetry.scripts]
+wordcloud_cli_for_japanese = "wordcloud_cli_for_japanese.core:cli"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
